Fix mdim dropdowns cutting off on small screen

--- a/site/multiDim/MultiDimDataPageSettingsPanel.scss
+++ b/site/multiDim/MultiDimDataPageSettingsPanel.scss
@@ -129,4 +129,8 @@ $toggle-height: 40px;
             border-bottom: none;
         }
     }
+
+    @include sm-only {
+        width: 264px;
+    }
 }
